fix dark mode editor bg

--- a/public/styles.css
+++ b/public/styles.css
@@ -49,3 +49,7 @@ pre {
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
   cursor: row-resize;
 }
+
+.cm-editor {
+  background: transparent !important;
+}
